# fcitx5-lekhika

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bump_version.sh  cmake_uninstall.cmake.in  fcitx5-lekhika.metainfo.xml  install-template.sh  install.sh  lekhika-trainer.metainfo.xml  lekhika-trainer.py  lekhika.cpp  lekhika.h  prebuilt-install  release.sh  update-metainfo.sh
.github/workflows/: build.yml  main.yml  release.yml
config/: fcitx5lekhika.addon.conf  fcitx5lekhika.conf  fcitx5lekhika.inputmethod.intry.desc
data/: autocorrect.toml  lekhika-trainer.desktop  mapping.toml
icons/: CMakeLists.txt
src/: lekhika-addon.cpp  lekhika-addon.h  lekhika-trainer.cpp  lekhika_core.cpp  lekhika_core.h
